--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -2,6 +2,12 @@ body {
     font-family:'Poppins', 'Gill Sans', 'Gill Sans MT', Calibri,  'Trebuchet MS', sans-serif; 
 }
 .navbar {
+    background-image: url('../assets/assets/harinas\ img\ 3.jpeg');
+    background-size: cover;
+    height: 50px;
+  }
+  
+.navbar {
     display: flex;
     height: 120px;
     background-color:lightgray;
